--- a/resources/assets/styles/app.css
+++ b/resources/assets/styles/app.css
@@ -5,5 +5,43 @@
 
 @import "tailwindcss/components";
 @import "components/nav.css";
+@import "components/widgets.css";
 
 @import "tailwindcss/utilities";
+
+@layer base {
+
+    h1 {
+        @apply text-4xl;
+    }
+
+    h2 {
+        @apply text-2xl;
+    }
+
+    h3 {
+        @apply text-xl;
+    }
+
+    h4 {
+        @apply text-lg;
+    }
+
+    h5 {
+        @apply text-sm;
+    }
+
+    h6 {
+        @apply text-base;
+    }
+
+    a {
+        @apply border-b border-white;
+    }
+
+    a:hover {
+        @apply border-black;
+    }
+
+}
+
