--- a/resources/assets/styles/base/base.css
+++ b/resources/assets/styles/base/base.css
@@ -9,17 +9,17 @@
 }
 
 .h2 {
-  @apply text-2xl text-center;
+  @apply text-2xl;
 }
 
 .h3 {
-
+  @apply text-xl;
 }
 
 .h4 {
-
+  @apply text-lg;
 }
 
 .h5 {
-
+  @apply text-sm;
 }
