Updated version number

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name:         Rópa
 Theme URI:          https://fjakkarin.com/ropa/
 Description:        Rópa is the theme that is used on Fjakkarin.com
-Version:            0.1.0
+Version:            v0.1.0
 Author:             Jóhan H Dam-Davidsen
 Author URI:         https://fjakkarin.com/
 Text Domain:        ropa
