--- a/resources/styles/app.css
+++ b/resources/styles/app.css
@@ -1,47 +1,53 @@
-@import "tailwindcss/base";
+/*
+@import "../../node_modules/tailwindcss/base.css";
 @import "base/fonts.css";
 @import "base/base.css";
 @import "layout/content.css";
 
-@import "tailwindcss/components";
+@import "../../node_modules/tailwindcss/components.css";
 @import "components/nav.css";
 @import "components/widgets.css";
 @import "components/content-single.css";
 
-@import "tailwindcss/utilities";
+@import "../../node_modules/tailwindcss/utilities.css";
 @import "vendor/font-awesome.css";
+*/
 
-@layer base {
+@import 'tailwindcss/base';
 
-    h1 {
-        @apply text-4xl;
-    }
+@import 'tailwindcss/components';
 
-    h2 {
-        @apply text-2xl;
-    }
+@import 'tailwindcss/utilities';
 
-    h3 {
-        @apply text-xl;
-    }
+/**
+ * Post
+ */
+.post {
+    @apply max-w-3xl;
+}
 
-    h4 {
-        @apply text-lg;
-    }
+/**
+ * NavBar
+ */
+.navbar-menu {
+    @apply hidden sm:ml-6 sm:flex sm:space-x-8;
+}
 
-    h5 {
-        @apply text-sm;
-    }
+.navbar-menu .menu-item {
+    @apply border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium;
+}
 
-    h6 {
-        @apply text-base;
-    }
+.navbar-menu .current-menu-item {
+    @apply border-black text-gray-900;
+}
 
-    a {
-        @apply border-b border-white;
-    }
+/**
+ * Footer
+ */
+.footer-menu {
+    @apply -mx-5 -my-2 flex flex-wrap justify-center;
+}
 
-    a:hover {
-        @apply border-black;
-    }
+.footer-menu .menu-item {
+    @apply px-5 py-2 text-base text-gray-500 hover:text-gray-900;
 }
