--- a/resources/styles/app.css
+++ b/resources/styles/app.css
@@ -20,34 +20,94 @@
 @import 'tailwindcss/utilities';
 
 /**
- * Post
+ * This class is used in combination with the wp-block-query class.
  */
+.wp-block-post-template {
+  @apply mt-12 max-w-lg mx-auto grid gap-5 lg:grid-cols-3 lg:max-w-none;
+}
+
+.wp-block-post-template li {
+  @apply flex flex-col rounded-lg shadow-lg overflow-hidden;
+}
+
+.wp-block-post-date {
+  @apply px-6;
+}
+
+.wp-block-post-title {
+  @apply px-6;
+}
+
+.wp-block-post-excerpt {
+  @apply px-6 pb-6;
+}
+
+/**
+ * Custom class for frontpage
+ */
+.blog-projects {
+  @apply max-w-2xl mx-auto;
+}
+
+.blog-projects .wp-block-post-template {
+  @apply lg:grid-cols-2;
+}
+
+.blog-projects .wp-block-post-date {
+ @apply -mt-24;
+}
+
+/**
+ * Custom class for frontpage
+ */
+.blog-latest {
+  @apply max-w-md mx-auto;
+}
+
+.blog-latest .wp-block-post-template {
+  @apply lg:grid-cols-1;
+}
+
+.blog-latest .wp-block-post-title {
+  @apply pt-6;
+}
+
+  /**
+   * Post
+   */
 .post {
-    @apply max-w-3xl;
+  @apply max-w-3xl;
 }
 
 /**
  * NavBar
  */
 .navbar-menu {
-    @apply hidden sm:ml-6 sm:flex sm:space-x-8;
+  @apply hidden sm:ml-6 sm:flex sm:space-x-8;
 }
 
 .navbar-menu .menu-item {
-    @apply border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium;
+  @apply border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium;
 }
 
 .navbar-menu .current-menu-item {
-    @apply border-black text-gray-900;
+  @apply border-black text-gray-900;
 }
 
 /**
  * Footer
  */
 .footer-menu {
-    @apply -mx-5 -my-2 flex flex-wrap justify-center;
+  @apply -mx-5 -my-2 flex flex-wrap justify-center;
 }
 
 .footer-menu .menu-item {
-    @apply px-5 py-2 text-base text-gray-500 hover:text-gray-900;
+  @apply px-5 py-2 text-base text-gray-500 hover:text-gray-900;
+}
+
+/**
+ * Standard DOM elements
+ */
+h2 {
+  @apply text-xl font-semibold text-gray-900;
 }
